Quiz page header relative alignment fix (removed relative stuff)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -487,6 +487,10 @@ md-tabs {
         }
     }
 
+    &.quizPage{
+        top: 0;
+    }
+
 
     header {
         height: @fullScreenHeaderHeight;
