--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -15,15 +15,13 @@
     }
 
     header {
-        position: relative;
         align-items: center;
+        white-space: nowrap;
 
         .text-center {
+            display: inline-block;
+            line-height: 85px;
             width: 100%;
-            line-height: initial;
-            margin: 0 auto;
-            position: absolute;
-            padding: 29px 0;
         }
     }
 
